--- a/project/index.html
+++ b/project/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-
+		<!-- ADD THE VIEWPORT META TAG HERE -->
 		<title>Your Name | Job Title or Tagline</title>
 		
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Merriweather|Pacifico' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 		<!-- PUT THE STYLESHEET LINK HERE -->
-
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 
@@ -19,13 +19,12 @@
 			<h2>Job Title or Tagline</h2>
 		</header>
 
-
 		<!-- ABOUT ME / PROFILE -->
 		<section class="profile">
-			<div class="content-wrap clearfix">
+			<div class="content-wrap">
 				<img class="profile-image" src="images/doggy.jpg" alt="">
 				<div class="summary">
-					<h2>Hello!</h2>
+					<h1>Hello!</h1>
 					<p>[Profile summary here] Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis laboriosam officia blanditiis tempora sit fugiat molestiae iusto impedit ipsa cum, asperiores laborum, esse, doloribus explicabo! Autem, distinctio provident itaque non.</p>
 					<p>Links to stuff about you, if needed. <a href="#">link</a> and <a href="#">link</a>.</p>
 					<p>Or another paragraph!</p>
@@ -37,24 +36,23 @@
 		<!-- WORK EXPERIENCE -->
 		<section class="work-experience">
 			<div class="content-wrap">
-				<h2>Work Experience</h2>
+				<h1>Work Experience</h1>
 
 				<div class="item">
 
 					<div class="details">
-						<h4 class="company">Company Name</h4>
+						<h2 class="company">Company Name</h2>
 						<h3>Job title</h3>
 						<p class="date">July 2014 - Present</p>
 					</div>
 					<div class="description">
 						<p>Suspendisse dignissim nisi non velit interdum, in condimentum augue varius. Nullam ac felis eu lacus rhoncus posuere. Fusce pretium auctor bibendum. Suspendisse rutrum rhoncus purus sed dapibus. Nulla in viverra justo. Quisque id sapien sed urna lobortis rutrum eu sed enim. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus.</p>
 					</div>
-
 				</div>
 
 				<div class="item">
 					<div class="details">
-						<h4 class="company">Another Company</h4>
+						<h2 class="company">Another Company</h2>
 						<h3>Job title</h3>
 						<p class="date">September 2012 - Present</p>
 					</div>
@@ -65,7 +63,7 @@
 
 				<div class="item">
 					<div class="details">
-						<h4 class="company">Company Three</h4>
+						<h2 class="company">Company Three</h2>
 						<h3>Job Title</h3>
 						<p class="date">March 2013 - February 2014</p>
 					</div>
@@ -83,49 +81,14 @@
 			</div>
 		</section>
 
-
-		<!-- SKILLS -->
-		<section class="skills">
-			<div class="content-wrap">
-				<h2>Skills</h2>
-
-				<div class="skills-list clearfix">
-					<div class="columns">
-						<h3>Best at:</h3>
-						<ul>
-							<li><i class="fa fa-check"></i> HTML5 / CSS3</li>
-							<li><i class="fa fa-check"></i> Less / Sass</li>
-							<li><i class="fa fa-check"></i> JavaScript / jQuery</li>
-						</ul>
-					</div>
-					<div class="columns">
-						<h3>Worked with:</h3>
-						<ul>
-							<li><i class="fa fa-check"></i> Wordpress</li>
-							<li><i class="fa fa-check"></i> PHP</li>
-							<li><i class="fa fa-check"></i> Another Thing</li>
-						</ul>
-					</div>
-					<div class="columns">
-						<h3>Learning:</h3>
-						<ul>
-							<li><i class="fa fa-check"></i> Topic</li>	
-							<li><i class="fa fa-check"></i> Something Else</li>	
-						</ul>
-					</div>				
-				</div>
-			</div>
-		</section>
-
-
 		<!-- EDUCATION -->
 		<section class="education">
 			<div class="content-wrap">
-				<h2>Education</h2>
+				<h1>Education</h1>
 
 				<div class="item">
-					<h3>College or University, 2006</h3>
-					<h4>Designation or Degree</h4>
+					<h2>College or University, 2006</h2>
+					<h3>Designation or Degree</h3>
 					<p>Description and/or awards. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate voluptas architecto asperiores, natus qui quod suscipit quae, dolorum. Provident minus doloremque a deserunt quam saepe error quibusdam explicabo, possimus aliquam.</p>
 				</div>
 			</div>
@@ -133,8 +96,8 @@
 
 		<!-- CONTACT INFO -->
 		<section class="contact">
-			<div class="content-wrap clearfix">
-				<h2>Let's keep in touch!</h2>
+			<div class="content-wrap">
+				<h1>Let's keep in touch!</h1>
 
 				<div class="social">
 					<a href="#" title="Twitter"><i class="fa fa-twitter"></i></a>
@@ -150,7 +113,7 @@
 				 Toronto, ON A1B 2C3</p>
 
 				<footer>
-					<p class="copyright">Copyright &#169; 2014 by Your Name</p>
+					<p class="copyright">Copyright &#169; 2015 by Your Name</p>
 				</footer>
 			</div>
 		</section>
